--- a/pom.xml
+++ b/pom.xml
@@ -12,17 +12,97 @@
            <java.version>1.8</java.version>
            <maven.compiler.source>1.8</maven.compiler.source>
            <maven.compiler.target>1.8</maven.compiler.target>
+           <spring.version>5.1.2.RELEASE</spring.version>
+           <junit.version>4.11</junit.version>
+           <log4j.version>1.2.17</log4j.version>
+           <sonar.host.url>http:3.25.215.204:9000/</sonar.host.url>
+           <sonar.login>f0fd391a3d6180e93f715897e1e3f68d655bdd76</sonar.login>
+           <!--<sonar.password>admin</sonar.password> --> 
+           <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+            <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding
      </properties>
 
       <dependencies>
            <dependency>
-               <groupId>joda-time</groupId>
-               <artifactId>joda-time</artifactId>
+               <groupId>hherm</groupId>
+               <artifactId>hermann</artifactId>
                <version>2.2</version>
            </dependency>
+
+           <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20160212</version>
+    </dependency>
+    
+    <!-- test dependencies -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.9.5</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- compile dependencies -->
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    
+    <!-- provided dependencies -->
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
        </dependencies>
        <!-- end::joda[] -->
-       
+       <distributionManagement>
+      <repository>
+        <id>nexus</id>
+        <name>maven-web-application-releases Repository</name>
+        <url>http://3.27.217.2:8081/repository/Hermann-tesla-project-for-tesla-web-application-Release/</url>
+      </repository>
+      
+      <snapshotRepository>
+        <id>nexus</id>
+        <name>maven-web-application-Snapshot Nexus Repository </name>
+        <url>http://3.27.217.2:8081/repository/Hermann-tesla-project-for-tesla-web-application-Sanpshot/</url>
+      </snapshotRepository>
+      
+  </distributionManagement>
     <build>
         <plugins>
             <plugin>
@@ -45,7 +125,44 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            <plugin>
+           <plugin>
+        <finalName>hermann</finalName>
+    
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.3</version>
+        <configuration>
+          <source>${jdk.version}</source>
+          <target>${jdk.version}</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>9.2.11.v20150529</version>
+        <configuration>
+          <scanIntervalSeconds>10</scanIntervalSeconds>
+          <webApp>
+            <contextPath>/maven-web-application</contextPath>
+          </webApp>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-eclipse-plugin</artifactId>
+        <version>2.9</version>
+        <configuration>
+          <downloadSources>true</downloadSources>
+          <downloadJavadocs>true</downloadJavadocs>
+          <wtpversion>2.0</wtpversion>
+          <wtpContextName>maven-web-application</wtpContextName>
+        </configuration>
+      </plugin>
         </plugins>
     </build>
 </project>
